--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "tdd": "jest --watch --runInBand"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
-    "mongoose": "^5.9.21"
+    "mongoose": "^5.9.21",
+    "uuid": "^8.3.0",
+    "uuid-random": "^1.3.2"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.1.5",
